--- a/index.html
+++ b/index.html
@@ -62,9 +62,12 @@ Enjoy!</p><h2>Dependencies</h2>
 Compile using the makefile.
 Play.</p>
 <h2>Authors</h2>
-<p>Kristof (kristof@pantheonsoftware.org)<br/><br/>      </p>
+<p>Kristof (kristof@pantheonsoftware.org)
+Ben (ben@pantheonsoftware.org
+<br/>      </p>
 <h2>Contact</h2>
-<p>Kristof (kristof@pantheonsoftware.org)<br/>      </p>
+<p>Kristof (kristof@pantheonsoftware.org)
+<br/>      </p>
 
 
     <h2>Download</h2>
